Corrections and improvements
